# booking

./: Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml
config/: fixtures.json
config/accommodations/: admin.py  models.py  serializers.py  urls.py  views.py
config/accommodations/migrations/: 0001_initial.py  0002_initial.py
config/accounts/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
config/accounts/migrations/: 0001_initial.py
config/bookings/: models.py  serializers.py  urls.py  views.py
config/bookings/migrations/: 0001_initial.py
config/config/: settings.py  urls.py
config/feedbacks/: models.py  serializers.py  urls.py  views.py
config/feedbacks/migrations/: 0001_initial.py
